operaciones read y create con listas, usando el adapter y listview.

--- a/FirstApp/app/src/main/res/values/strings.xml
+++ b/FirstApp/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="developer">Ramiro Galvan</string>
     <string name="desarrollo">desarrollo por:</string>
     <string name="version">Version 1.0.0</string>
+    <string name="hello_world">hello world!</string>
 </resources>
